                name ('server_name iredmail.org;')
              - sites-conf.d/iredmail.org/listen.conf: define the listen port
                ('port 80;').
              - sites-conf.d/iredmail.org/root.conf: define the document root
                directory ('root /var/www/vhosts/iredmail.org;')

    * Fixed issues:
        - tools/backup_mysql.sh: Backup sql databases with mysqldump option
          '--skip-comments' to avoid possible backdooring hack.
          FYI: https://blog.tarq.io/cve-2016-5483-backdooring-mysqldump-backups/
        - FreeBSD:
            - installing port 'archives/arj' interrupts iRedMail installation.
              This is caused by global variable 'LANGUAGE=C'.
            - Cannot reset MySQL (5.7) password.

    * Updated packages:
        + Roundcube -> 1.2.4

iRedMail-0.9.6:
    * Supports new distribution release:
        + OpenBSD 6.0. OpenBSD 5.9 is not supported anymore.
        + FreeBSD 11.0.
        + Ubuntu 16.10. WARNING: Ubuntu 16.10 will end of life in July 2017,
          Ubuntu 16.04 LTS edition is recommended for a production server.

    * Improvements:
        - Use rsyslog (requires version 8.x) instead of internal logging system
          for Dovecot on CentOS 7 and Ubuntu 16.04, 16.10.

          rsyslog is default syslog program on CentOS, Debian and Ubuntu.
          With rsyslog, we're able to discard log messages which matches
          given regular expressions if it produces too fast. for example,
          HAProxy performs health check every few seconds for POP3/IMAP (and
          other) services, we can easily discard those health check related
          logs to save disk space.

        - Switch Awstats user authentication from SQL/LDAP to basic auth based
          on file, Awstats is now available for both Apache and Nginx.
        - Installer:
            + Able to choose not to install web server and web applications.

        - Nginx: